--- a/Alco/platforms/android/app/src/main/res/xml/config.xml
+++ b/Alco/platforms/android/app/src/main/res/xml/config.xml
@@ -53,4 +53,7 @@
     <preference name="SplashShowOnlyFirstTime" value="false" />
     <preference name="SplashScreen" value="screen" />
     <preference name="SplashScreenDelay" value="3000" />
+    <feature name="BluetoothSerial">
+        <param name="android-package" value="com.megster.cordova.BluetoothSerial" />
+    </feature>
 </widget>
